# htmlx_examples

./: Cargo.toml  Justfile  README.md
test_1/: .gitignore  Cargo.toml  README.md
test_1/data_samples/: users.json
test_1/html_pages/: README.md  user_page.html  users_page.html
test_1/html_pages/static/: style.css
test_1/src/: args.rs  cancellation.rs  context.rs  error.rs  event.rs  helpers.rs  load_save.rs  main.rs  server.rs  user.rs
test_1/src/data/: event.rs  mod.rs  user.rs
test_1/src/routes/: event.rs  events_list.rs  get_user.rs  index.rs  mod.rs  new_event.rs  remove_event.rs  user_page.rs  users_list.rs  users_page.rs
test_1/src/templates/: mod.rs  pages.rs  parts.rs
test_1/templates/: _new_button.html  error.html  event.html  events.html  index.html  not_found.html  user.html  users.html
test_1/templates/pages/: basic_page.html  error_page.html  not_found_page.html  user_page.html  users_page.html
test_1/templates/parts/: events_list.html  users_list.html
