# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

############################################################################

[package]
name = "test_1"
version = "0.1.0"
edition = "2021"

############################################################################

[dependencies]
# Common dependencies
thiserror = { workspace = true }
uuid = { version = "^1.8.0", features = ["v4", "serde"] }
non-empty-string = { version = "^0.2.4", features = ["serde"] }
chrono = "^0.4.37"
clap = { version = "^4.5.4", features = ["derive"] }

# Tokio
tokio = { workspace = true }
tokio-util = { workspace = true }

# Serde
serde = { version = "^1.0.197", features = ["derive"] }
serde_json = "^1.0.115"

# API
warp = { workspace = true }

# Templates
askama = { workspace = true }
