# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

############################################################################

[package]
name = "test_1"
version = "0.1.0"
edition = "2021"

############################################################################

[dependencies]
# Common dependencies
thiserror = { workspace = true }
uuid = { version = "^1.8.0", features = ["v7", "serde"] }
non-empty-string = { version = "^0.2.4", features = ["serde"] }
chrono = { version = "^0.4.37", features = ["serde"] }
clap = { version = "^4.5.4", features = ["derive"] }
parking_lot = "^0.12.1"
tempfile = "^3.10.0"
cast = { version = "^0.3.0", features = ["std"] }

# Tokio
tokio = { workspace = true }
tokio-util = { workspace = true }

# Serde
serde = { version = "^1.0.197", features = ["derive"] }
serde_json = "^1.0.115"

# API
warp = { workspace = true }

# Templates
askama = { workspace = true }
